hphp/hack/test/typecheck/reactive/parse_multiple7.php.exp
File "parse_multiple7.php", line 2, characters 1-26:
Only one of following annotations is allowed: `__Pure`, `__Rx`, `__RxShallow`, `__RxLocal`, `__NonRx`, `__Cipp`, `__CippLocal`, `__CippGlobal`. (Parsing[1002])
